tests/sources/invalid/classes/class_def_syntax_errors.fire
// Malformed class definitions.

// Missing class name
class {  //~ ERROR FS-PARSE-0010 @7
    v: int32;  //~ ERROR FS-PARSE-0010 @13
}

// Missing generic type parameter name
class G1<> {  //~ ERROR FS-PARSE-0010 @10
    v: int32;  //~ ERROR FS-PARSE-0010 @13
}

// Missing '>' to close class type parameters
class G2<T {  //~ ERROR FS-PARSE-0010 @12
    v: int32;  //~ ERROR FS-PARSE-0010 @13
}

// Missing base class name after 'from'
class D1 from {  //~ ERROR FS-PARSE-0010 @15
    v: int32;  //~ ERROR FS-PARSE-0010 @13
}

// Class inheriting from itself
class S1 from S1 {  //~ ERROR FS-PARSE-0012 @15
    v: int32;

    fn S1() {
        this.v = 1;
    }
}

// Missing '{' to start class body
class N1
topLevel: int32 = 1;  //~ ERROR FS-PARSE-0010 @1

// Member that is not a type
class M1 {
    ! bogus;  //~ ERROR FS-PARSE-0010 @5
    v: int32;

    fn M1() {
        this.v = 1;
    }
}

// Static constructor is rejected
class C1 {
    v: int32;

    static fn C1() {  //~ ERROR FS-PARSE-0012 @15
        this.v = 1;  //~ ERROR FS-PARSE-0003 @9
    }
}

// '&' not immediately followed by 'this' is parsed as a plain borrowed
// parameter (not a receiver), so 'other' is consumed as the parameter name
// and parsing then fails at the missing ':'.
class R1 {
    v: int32;

    fn R1() {
        this.v = 1;
    }

    fn get(&other) -> int32 {  //~ ERROR FS-PARSE-0010 @18
        return 1;
    }
}

// 'owned' not followed by 'this' is parsed as the owned-parameter modifier
// (not the literal parameter name), so 'other' is consumed as the parameter
// name and parsing then fails at the missing ':'.
class R2 {
    v: int32;

    fn R2() {
        this.v = 1;
    }

    fn take(owned other) -> int32 {  //~ ERROR FS-PARSE-0010 @24
        return 1;
    }
}

// Method parameter type invalid
class P1 {
    v: int32;

    fn P1() {
        this.v = 1;
    }

    fn m(&this, x: !) -> int32 {  //~ ERROR FS-PARSE-0010 @20
        return 1;
    }
}

// Array parameters are not supported for methods
class P2 {
    v: int32;

    fn P2() {
        this.v = 1;
    }

    fn m(&this, xs: int32[]) -> int32 {  //~ ERROR FS-PARSE-0012 @21
        return 1;
    }
}

// Missing method parameter name
class P3 {
    v: int32;

    fn P3() {
        this.v = 1;
    }

    fn m(&this, : int32) -> int32 {  //~ ERROR FS-PARSE-0010 @17
        return 1;
    }
}
